--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500&display=swap');
+
+:root {
+    --primary-background-color: #fff;
+    --secondary-background-color: #f0f1f0;
+    --primary-font-family: 'Playfair Display', serif;
+    --seconday-font-family: 'Poppins', san-sarif;
+    --header-size: 100px;
+}
+
 * {
     box-sizing: inherit;
     margin: 0;
@@ -6,5 +16,166 @@
 
 body {
     box-sizing: border-box;
-    background-color: rgb(240 241 240);
+    height: 100vh;
+    overflow: hidden;
+    background-color: var(--primary-background-color);
+}
+
+header.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: var(--header-size);
+    padding: 10px 100px;
+    color: #000;
+}
+
+header.header ul {
+    list-style: none;
+}
+
+header.header ul li {
+    display: inline-block;
+    padding: 10px;
+    font-size: 15px;
+    font-weight: 400;
+    text-transform: capitalize;
+    font-family: var(--seconday-font-family);
+}
+
+header.header ul li:not(:last-child) {
+    margin-right: 50px;
+}
+
+header.header ul li.bell span {
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border: 1px solid #000;
+    height: 40px;
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+main.main {
+    height: 100%;
+width: 100%;
+}
+
+main.main .container {
+max-width: 1200px;
+padding-right: 15px;
+padding-left: 15px;
+margin-left: auto;
+margin-right: auto;
+height: calc(100vh - var(--header-size));
+display: flex;
+justify-content: space-between;
+}
+
+main .hero {
+    flex: 0 0 50%;
+    max-width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* padding-top: 50px; */
+}
+
+main .hero h1 {
+    max-width: 350px;
+    font-size: 90px;
+    font-weight: 700;
+    line-height: 105%;
+    letter-spacing: .7px;
+    font-family: var(--primary-font-family);
+    margin-bottom: 50px;
+}
+
+main .hero h1 span {
+    text-decoration: underline;
+}
+
+main .hero p {
+    max-width: 350px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: .5px;
+    font-family: var(--seconday-font-family);
+    margin-bottom: 50px;
+}
+
+main .hero button.btn-arrow {
+    background-color: transparent;
+    border: none;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+}
+
+main .hero button.btn-arrow i {
+    height: 40px;
+    width: 40px;
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+} 
+
+main .hero button.btn-arrow span {
+    margin-left: 20px;
+    font-size: 16px;
+}
+
+main .feature {
+    flex: 0 0 50%;
+    max-width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    /* padding-top: 60px; */
+}
+
+main .feature ul {
+    list-style: none;
+    text-align: right;
+}
+
+main .feature ul li {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 20px;
+    text-transform: capitalize;
+    font-family: var(--seconday-font-family);
+}
+
+main .feature ul li:not(:last-child) {
+    margin-bottom: 60px;
+}
+
+main .model {
+    padding: 10px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    height: 90vh;
+    width: 46vw;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    z-index: -1;
+    background-color: var(--secondary-background-color);
+    transform: translate(-50%, 0%);
+    -webkit-transform: translate(-50%, 0%);
+    -moz-transform: translate(-50%, 0%);
+    -ms-transform: translate(-50%, 0%);
+    -o-transform: translate(-50%, 0%);
 }
