--- a/style.css
+++ b/style.css
@@ -84,20 +84,28 @@ main .hero {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    z-index: 1;
     /* padding-top: 50px; */
 }
 
 main .hero h1 {
-    max-width: 350px;
     font-size: 90px;
     font-weight: 700;
     line-height: 105%;
     letter-spacing: .7px;
     font-family: var(--primary-font-family);
-    margin-bottom: 50px;
+
+    position: relative;
+    overflow: hidden;
+    height: 102px;
+    width: 100%;
 }
 
-main .hero h1 span {
+main .hero h1 .hidetext {
+    position: absolute;
+}
+
+main .hero h1 span.underline {
     text-decoration: underline;
 }
 
@@ -109,6 +117,16 @@ main .hero p {
     letter-spacing: .5px;
     font-family: var(--seconday-font-family);
     margin-bottom: 50px;
+    margin-top: 50px;
+
+    position: relative;
+    overflow: hidden;
+    height: 60px;
+    width: 100%;
+}
+
+main .hero p .hidetext {
+    position: absolute;
 }
 
 main .hero button.btn-arrow {
@@ -117,6 +135,7 @@ main .hero button.btn-arrow {
     padding: 5px;
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 main .hero button.btn-arrow i {
@@ -128,11 +147,14 @@ main .hero button.btn-arrow i {
     justify-content: center;
     align-items: center;
     font-size: 20px;
+    position: absolute;
 } 
 
 main .hero button.btn-arrow span {
     margin-left: 20px;
     font-size: 16px;
+    position: absolute;
+    left: 40px;
 }
 
 main .feature {
@@ -171,11 +193,28 @@ main .model {
     width: 46vw;
     border-bottom-left-radius: 50%;
     border-bottom-right-radius: 50%;
+    overflow: hidden;
     z-index: -1;
-    background-color: var(--secondary-background-color);
+   
     transform: translate(-50%, 0%);
     -webkit-transform: translate(-50%, 0%);
     -moz-transform: translate(-50%, 0%);
     -ms-transform: translate(-50%, 0%);
     -o-transform: translate(-50%, 0%);
+}
+
+main .model .bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: var(--secondary-background-color);
+}
+
+main .model img {
+    position: absolute;
+    bottom: -55px;
+    right: 0;
+    z-index: 2;
 }
